# shrink-wrap

./: CMakeLists.txt  README.md  alpha_wrap_100_600.off  main.cpp  run.sh  shrink_wrap.cpp  table_s8.csv  volume_of_organ.csv
alph_wrap/: alpha_wrap_3d-vh-f-mammary-gland-l_50_600.off  alpha_wrap_3d-vh-f-mammary-gland-r_50_600.off  alpha_wrap_3d-vh-f-skin_50_600.off  alpha_wrap_Allen_F_Brain_50_600.off  alpha_wrap_Allen_M_Brain_50_600.off  alpha_wrap_NIH_F_Lymph_Node_50_600.off  alpha_wrap_NIH_M_Lymph_Node_50_600.off  alpha_wrap_SBU_F_Intestine_Large_50_600.off  alpha_wrap_SBU_M_Intestine_Large_50_600.off  alpha_wrap_VH_F_Blood_Vasculature_50_600.off  alpha_wrap_VH_F_Eye_L_50_600.off  alpha_wrap_VH_F_Eye_R_50_600.off  alpha_wrap_VH_F_Fallopian_Tube_L_50_600.off  alpha_wrap_VH_F_Fallopian_Tube_R_50_600.off  alpha_wrap_VH_F_Heart_50_600.off  alpha_wrap_VH_F_Kidney_L_50_600.off  alpha_wrap_VH_F_Kidney_R_50_600.off  alpha_wrap_VH_F_Knee_L_50_600.off  alpha_wrap_VH_F_Knee_R_50_600.off  alpha_wrap_VH_F_Liver_50_600.off  alpha_wrap_VH_F_Lung_50_600.off  alpha_wrap_VH_F_Ovary_L_50_600.off  alpha_wrap_VH_F_Ovary_R_50_600.off  alpha_wrap_VH_F_Pancreas_50_600.off  alpha_wrap_VH_F_Pelvis_50_600.off  alpha_wrap_VH_F_Placenta_50_600.off  alpha_wrap_VH_F_Skin_50_600.off  alpha_wrap_VH_F_Small_Intestine_50_600.off  alpha_wrap_VH_F_Spinal_Cord_50_600.off  alpha_wrap_VH_F_Spleen_50_600.off  alpha_wrap_VH_F_Thymus_50_600.off  alpha_wrap_VH_F_Ureter_L_50_600.off  alpha_wrap_VH_F_Ureter_R_50_600.off  alpha_wrap_VH_F_Urinary_Bladder_50_600.off  alpha_wrap_VH_F_Uterus_50_600.off  (+22 more)
(+7 files in other folders)
